# 3D-scanning-and-motion-capture

./: .gitignore  README.md
ARAP/: arap.h
E1/exercise_1/: CMakeLists.txt  main.cpp
E2/exercise_2/: CMakeLists.txt  SimpleMesh.h  Volume.cpp  Volume.h  main.cpp
E2/exercise_2/E2-Pikl-Abgabe/: ImplicitSurface.h  MarchingCubes.h
E3/exercise_3/: CMakeLists.txt  ProcrustesAligner.h  SimpleMesh.h  main.cpp
E4/__MACOSX/exercise_4/: ._data
E4/exercise_4/exercise_4/: CMakeLists.txt  dragon.cpp  gaussian.cpp  plot_dragon.py  plot_gaussian.py  plot_surface.py  surface.cpp
E4/exercise_4/exercise_4/utils/: io.h  points.h
E5/exercise_5/: CMakeLists.txt  ICPOptimizer.h  NearestNeighbor.h  PointCloud.h  ProcrustesAligner.h  VirtualSensor.h  main.cpp
